News UAT/force-app/main/default/objects/Order__c/fields/Is_Start_All_Fulfilment_Button_Pushed__c.field-meta.xml
<CustomField>
    <fullName>Is_Start_All_Fulfilment_Button_Pushed__c</fullName>
    <label>Is Start All Fulfilment Button Pushed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Clicked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>