News UAT/force-app/main/default/objects/Order__c/fields/Issue_Resolved_On_Client_Website__c.field-meta.xml
<CustomField>
    <fullName>Issue_Resolved_On_Client_Website__c</fullName>
    <label>Issue Resolved On Client Website?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>