News UAT/force-app/main/default/objects/Order__c/fields/Issues_With_Tag_Placements__c.field-meta.xml
<CustomField>
    <fullName>Issues_With_Tag_Placements__c</fullName>
    <label>Issues With Tag Placement?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>