News UAT/force-app/main/default/objects/Order__c/fields/Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated__c</fullName>
    <formula>Briefing_Form__r.LastModifiedBy.FirstName + &#39; &#39; + Briefing_Form__r.LastModifiedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Updated</label>
    <type>Text</type>
</CustomField>