News UAT/force-app/main/default/objects/Order__c/fields/Minimum_Evergreen_Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Evergreen_Cancellation_Date__c</fullName>
    <description>This field is supposed to be read only and mirrored from Payment record
NXRIII-311</description>
    <label>Minimum Evergreen Cancellation Date</label>
    <type>Date</type>
</CustomField>