News UAT/force-app/main/default/objects/Order__c/fields/Monthly_Dashboard_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Dashboard_Review_Date__c</fullName>
    <description>This field capture the next monthly review date</description>
    <formula>Monthly_Dashboard_Review_Date_Int__c + 30</formula>
    <label>Monthly Dashboard Review Date</label>
    <type>Date</type>
</CustomField>