News UAT/force-app/main/default/objects/Order__c/fields/Monthly_Internal_Campaign_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Internal_Campaign_Review_Date__c</fullName>
    <description>This is internal field used to capture the new internal review date (3 business days prior to new monthly dashboard review date)</description>
    <formula>CASE(MOD( Monthly_Dashboard_Review_Date__c - DATE( 1900, 1, 7 ), 7 ),
      3, Monthly_Dashboard_Review_Date__c - 2 - 3,
      4, Monthly_Dashboard_Review_Date__c - 3,
      5, Monthly_Dashboard_Review_Date__c - 3,
      6, Monthly_Dashboard_Review_Date__c - 3,
      0, Monthly_Dashboard_Review_Date__c - 1 - 3,
      1, Monthly_Dashboard_Review_Date__c - 2 - 3,
      Monthly_Dashboard_Review_Date__c - 2 - 3
)</formula>
    <label>Monthly Internal Campaign Review Date</label>
    <type>Date</type>
</CustomField>