News UAT/force-app/main/default/objects/Order__c/fields/Name_from_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Name_from_Sales_Order__c</fullName>
    <formula>Sales_Order__r.Campaign_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name from Sales Order</label>
    <type>Text</type>
</CustomField>