News UAT/force-app/main/default/objects/Order__c/fields/Next_Business_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Business_Date__c</fullName>
    <label>Next Business Date</label>
    <type>Date</type>
</CustomField>