News UAT/force-app/main/default/objects/Order__c/fields/Next_Campaign_Performance_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Campaign_Performance_Review_Date__c</fullName>
    <label>Next Campaign Performance Review Date</label>
    <type>Date</type>
</CustomField>