News UAT/force-app/main/default/objects/Order__c/fields/Next_Customer_Call_Report_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Customer_Call_Report_Review_Date__c</fullName>
    <label>Next Customer Call/Report Review Date</label>
    <type>Date</type>
</CustomField>