News UAT/force-app/main/default/objects/Order__c/fields/Next_Customer_Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Customer_Report_Date__c</fullName>
    <label>Next Customer Report Date</label>
    <type>Date</type>
</CustomField>