News UAT/force-app/main/default/objects/Order__c/fields/Next_Customer_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Customer_Review_Date__c</fullName>
    <formula>Next_Customer_Call_Report_Review_Date__c - 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Customer Review Date (-2 days)</label>
    <type>Date</type>
</CustomField>