News UAT/force-app/main/default/objects/Order__c/fields/Next_Dashboard_Internal_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Dashboard_Internal_Review_Date__c</fullName>
    <label>Next Dashboard Internal Review Date</label>
    <type>Date</type>
</CustomField>