News UAT/force-app/main/default/objects/Order__c/fields/Notes_for_Failure__c.field-meta.xml
<CustomField>
    <fullName>Notes_for_Failure__c</fullName>
    <label>Notes for Failure</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>