News UAT/force-app/main/default/objects/Order__c/fields/Number_of_Days_Before_Resume_Date__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_Before_Resume_Date__c</fullName>
    <formula>IF( 
    Campaign_Restart_Date__c  - TODAY() &lt; 8,
    true, 
    false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Days Before Resume Date</label>
    <type>Checkbox</type>
</CustomField>