News UAT/force-app/main/default/objects/Order__c/fields/Number_Of_Product_Orders_Paused__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Product_Orders_Paused__c</fullName>
    <label>Number Of Product Orders Paused</label>
    <summaryFilterItems>
        <field>Product_Order__c.Status__c</field>
        <operation>equals</operation>
        <value>Paused</value>
    </summaryFilterItems>
    <summaryForeignKey>Product_Order__c.Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>