News UAT/force-app/main/default/objects/Order__c/fields/Number_Of_Products_Ready_To_Be_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Products_Ready_To_Be_Reviewed__c</fullName>
    <label>Number Of Products Ready To Be Reviewed</label>
    <summaryFilterItems>
        <field>Product_Order__c.Product_Order_Ready_To_Be_Reviewed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Product_Order__c.Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>