News UAT/force-app/main/default/objects/Order__c/fields/Opportunity_Closed_Won_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Closed_Won_Date__c</fullName>
    <formula>Opportunity__r.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Closed/Won Date</label>
    <type>Date</type>
</CustomField>