News UAT/force-app/main/default/objects/Order__c/fields/Optimisation_Log__c.field-meta.xml
<CustomField>
    <fullName>Optimisation_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Optimisation Log</label>
    <referenceTo>Optimisation_Log__c</referenceTo>
    <relationshipLabel>Campaign Orders</relationshipLabel>
    <relationshipName>Campaign_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>