News UAT/force-app/main/default/objects/Order__c/fields/Overall_Status__c.field-meta.xml
<CustomField>
    <fullName>Overall_Status__c</fullName>
    <label>Overall Campaign Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>