News UAT/force-app/main/default/objects/Order__c/fields/Owner_Division__c.field-meta.xml
<CustomField>
    <fullName>Owner_Division__c</fullName>
    <formula>Opportunity__r.Owner_Division__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Division</label>
    <type>Text</type>
</CustomField>