News UAT/force-app/main/default/objects/Order__c/fields/Pause_Campaign_Internal__c.field-meta.xml
<CustomField>
    <fullName>Pause_Campaign_Internal__c</fullName>
    <description>This internal field is used to track if all the product orders have been paused.</description>
    <formula>IF(Total_Number_Of_Product_Orders__c  =  Number_Of_Product_Orders_Pending_Pause__c,
   true, 
   false)</formula>
    <label>Pause Campaign Internal</label>
    <type>Checkbox</type>
</CustomField>