News UAT/force-app/main/default/objects/Order__c/fields/Pause_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Pause_Start_Date__c</fullName>
    <label>Pause Start Date</label>
    <type>Date</type>
</CustomField>