News UAT/force-app/main/default/objects/Order__c/fields/Placed_and_Access_Granted__c.field-meta.xml
<CustomField>
    <fullName>Placed_and_Access_Granted__c</fullName>
    <label>Placed and Access Granted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>