News UAT/force-app/main/default/objects/Order__c/fields/Previous_Actual_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Previous_Actual_Start_Date__c</fullName>
    <description>Previous actual start date before the sales order got retracted</description>
    <inlineHelpText>Previous actual start date before the sales order got retracted</inlineHelpText>
    <label>Previous Actual Start Date</label>
    <type>Date</type>
</CustomField>