News UAT/force-app/main/default/objects/Order__c/fields/Previous_Campaign_Status_For_Cancel__c.field-meta.xml
<CustomField>
    <fullName>Previous_Campaign_Status_For_Cancel__c</fullName>
    <label>Previous Campaign Status For Cancel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>