News UAT/force-app/main/default/objects/Order__c/fields/Previous_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Previous_End_Date__c</fullName>
    <description>Previous end date before the sales order got retracted</description>
    <inlineHelpText>Previous end date before the sales order got retracted</inlineHelpText>
    <label>Previous End Date</label>
    <type>Date</type>
</CustomField>