News UAT/force-app/main/default/objects/Order__c/fields/Previous_Opp_CW_Date__c.field-meta.xml
<CustomField>
    <fullName>Previous_Opp_CW_Date__c</fullName>
    <description>Field to be set to Closed Won Date of Opp upon Retraction</description>
    <label>Previous Opportunity Closed/Won Date</label>
    <type>Date</type>
</CustomField>