News UAT/force-app/main/default/objects/Order__c/fields/Previous_Sales_Order_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Previous_Sales_Order_Start_Date__c</fullName>
    <description>Previous sales order start date before the sales order got retracted</description>
    <inlineHelpText>Previous sales order start date before the sales order got retracted</inlineHelpText>
    <label>Previous Sales Order Start Date</label>
    <type>Date</type>
</CustomField>