News UAT/force-app/main/default/objects/Order__c/fields/Progress_Bar__c.field-meta.xml
<CustomField>
    <fullName>Progress_Bar__c</fullName>
    <formula>IF(Progress_Percentage__c = 0,
    IMAGE(&quot;/servlet/servlet.FileDownload?file=0159000000Edwkw&quot;, &quot;Not Applicable&quot;),    
    IF(Progress_Percentage__c &lt;= 20 &amp;&amp; Progress_Percentage__c &gt; 0,
        IMAGE(&quot;/servlet/servlet.FileDownload?file=0159000000Edwkr&quot;, &quot;Warming Up&quot;), 
        IF(Progress_Percentage__c &lt;= 40 &amp;&amp; Progress_Percentage__c &gt; 0,
            IMAGE(&quot;/servlet/servlet.FileDownload?file=0159000000Edwks&quot;, &quot;In Progress&quot;), 
            IF(Progress_Percentage__c &lt;= 60 &amp;&amp; Progress_Percentage__c &gt; 0,
                IMAGE(&quot;/servlet/servlet.FileDownload?file=0159000000Edwkt&quot;, &quot;Half Way&quot;), 
                IF(Progress_Percentage__c &lt;= 80&amp;&amp; Progress_Percentage__c &gt; 0,
                    IMAGE(&quot;/servlet/servlet.FileDownload?file=0159000000Edwku&quot;, &quot;Almost There&quot;), 
                    IF(Progress_Percentage__c &lt;= 100 &amp;&amp; Progress_Percentage__c &gt; 0,
                        IMAGE(&quot;/servlet/servlet.FileDownload?file=0159000000Edwkv&quot;, &quot;Done&quot;), 
                        IMAGE(&quot;/servlet/servlet.FileDownload?file=0159000000Edwkw&quot;, &quot;Not Applicable&quot;)
                       )
                   )
               )
           )
       )
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Progress Bar</label>
    <type>Text</type>
</CustomField>