News UAT/force-app/main/default/objects/Order__c/fields/QA_Check_Approved__c.field-meta.xml
<CustomField>
    <fullName>QA_Check_Approved__c</fullName>
    <label>QA Check Approved?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>