News UAT/force-app/main/default/objects/Order__c/fields/Reset_QA_Items__c.field-meta.xml
<CustomField>
    <fullName>Reset_QA_Items__c</fullName>
    <description>This is to reset the QA Items on the Campaign Level. When retracted, the value is set to Yes, and for failed Peer Review runs, its set to No.</description>
    <label>Reset QA Items</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>