News UAT/force-app/main/default/objects/Order__c/fields/Sales_Order_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Created_By__c</fullName>
    <formula>IF(OR(ISNULL(Sales_Order__c), ISBLANK(Sales_Order__c) ), &#39;&#39;,  Sales_Order__r.CreatedBy.FirstName +&#39; &#39;+Sales_Order__r.CreatedBy.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Order Created By</label>
    <type>Text</type>
</CustomField>