News UAT/force-app/main/default/objects/Order__c/fields/Sales_Order_Link__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Link__c</fullName>
    <formula>IF(OR(ISNULL(Sales_Order__c), ISBLANK(Sales_Order__c) ) , &#39;&#39;,&#39;https://newscorpaustralia.my.salesforce.com/lightning/r/Sales_Order__c/&#39;+Sales_Order__c+&#39;/view&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Order Link</label>
    <type>Text</type>
</CustomField>