News UAT/force-app/main/default/objects/Order__c/fields/Sales_Order_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Name__c</fullName>
    <formula>IF(OR(ISNULL(Sales_Order__c), ISBLANK(Sales_Order__c) ) ,&#39;&#39;, Sales_Order__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Order Name</label>
    <type>Text</type>
</CustomField>