News UAT/force-app/main/default/objects/Order__c/fields/Sales_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Start_Date__c</fullName>
    <label>Sales Order Start Date</label>
    <type>Date</type>
</CustomField>