News UAT/force-app/main/default/objects/Order__c/fields/Schedule_Payments_Pushed_Count__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Payments_Pushed_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Schedule Payments Pushed Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>