News UAT/force-app/main/default/objects/Order__c/fields/Setup_Call_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Setup_Call_Schedule__c</fullName>
    <label>Setup Call Scheduled</label>
    <type>DateTime</type>
</CustomField>