News UAT/force-app/main/default/objects/Order__c/fields/Setup_Completed__c.field-meta.xml
<CustomField>
    <fullName>Setup_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Setup Completed</label>
    <type>Checkbox</type>
</CustomField>