News UAT/force-app/main/default/objects/Order__c/fields/Setup_Notes__c.field-meta.xml
<CustomField>
    <fullName>Setup_Notes__c</fullName>
    <label>Setup Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>