News UAT/force-app/main/default/objects/Order__c/fields/Setup_Risk__c.field-meta.xml
<CustomField>
    <fullName>Setup_Risk__c</fullName>
    <label>Setup Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Track</fullName>
                <default>true</default>
                <label>On Track</label>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Xtend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>