News UAT/force-app/main/default/objects/Order__c/fields/Start_All_Fulfillment_Pushed_Count__c.field-meta.xml
<CustomField>
    <fullName>Start_All_Fulfillment_Pushed_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Start All Fulfillment Pushed Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>