News UAT/force-app/main/default/objects/Order__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <length>10</length>
    <type>Text</type>
</CustomField>