News UAT/force-app/main/default/objects/Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Returned to Sales</fullName>
            </value>
            <value>
                <fullName>Ready for Review</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Fulfilment Started</fullName>
            </value>
            <value>
                <fullName>Fulfilment Ready</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Campaign Live</fullName>
            </value>
            <value>
                <fullName>Pending For Pause</fullName>
            </value>
            <value>
                <fullName>Pending For Cancel</fullName>
            </value>
            <value>
                <fullName>Campaign Ended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>