News UAT/force-app/main/default/objects/Order__c/fields/Total_Amount_GST_Excl__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_GST_Excl__c</fullName>
    <label>Total Amount GST Excl</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>