News UAT/force-app/main/default/objects/Order__c/fields/Total_Number_Of_Product_Orders__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_Of_Product_Orders__c</fullName>
    <label>Total Number Of Product Orders</label>
    <summaryForeignKey>Product_Order__c.Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>