News UAT/force-app/main/default/objects/Order__c/fields/Total_Number_Of_Products_To_Be_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_Of_Products_To_Be_Reviewed__c</fullName>
    <label>Total Number Of Products To Be Reviewed</label>
    <summaryFilterItems>
        <field>Product_Order__c.Product_Needs_To_Be_Reviewed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Product_Order__c.Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>