News UAT/force-app/main/default/objects/Order__c/fields/Weekly_Internal_Campaign_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Internal_Campaign_Review_Date__c</fullName>
    <formula>Weekly_Internal_Campaign_Review_Date_Int__c + 7</formula>
    <label>Weekly Internal Campaign Review Date</label>
    <type>Date</type>
</CustomField>