News UAT/force-app/main/default/objects/Order__c/fields/Weekly_Internal_Campaign_Review_Date_Int__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Internal_Campaign_Review_Date_Int__c</fullName>
    <label>Weekly Internal Campaign Review Date Int</label>
    <type>Date</type>
</CustomField>