News UAT/force-app/main/default/objects/Order__c/fields/X7_Days_Before_Resume_Date__c.field-meta.xml
<CustomField>
    <fullName>X7_Days_Before_Resume_Date__c</fullName>
    <description>Internal field used to send 7 days prior notification for restart date</description>
    <formula>Campaign_Restart_Date__c - 7</formula>
    <label>7 Days Before Resume Date</label>
    <type>Date</type>
</CustomField>