News UAT/force-app/main/default/objects/Order__c/validationRules/Campaign_Restart_Date_less_than_TODAY.validationRule-meta.xml
<ValidationRule>
    <fullName>Campaign_Restart_Date_less_than_TODAY</fullName>
    <active>true</active>
    <description>The Campaign Restart Date must not be in the past.</description>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c,&quot;Pending for Pause&quot;),
Campaign_Restart_Date__c &lt; TODAY ()
)</errorConditionFormula>
    <errorDisplayField>Campaign_Restart_Date__c</errorDisplayField>
    <errorMessage>The Campaign Restart Date must not be in the past. Populate the date as today&#39;s date or a date in the future.</errorMessage>
</ValidationRule>