News UAT/force-app/main/default/objects/Order__c/validationRules/Cancelled_Date_Not_Less_Than_Today.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancelled_Date_Not_Less_Than_Today</fullName>
    <active>false</active>
    <description>If a cancellation date is entered, it cannot be less than today.</description>
    <errorConditionFormula>AND(NOT(ISNULL(Cancellation_Date__c)),
					Cancellation_Date__c &lt; TODAY())</errorConditionFormula>
    <errorDisplayField>Cancellation_Date__c</errorDisplayField>
    <errorMessage>Cancellation Date cannot be less than today&#39;s date.</errorMessage>
</ValidationRule>