News UAT/force-app/main/default/objects/Order__c/validationRules/Change_comment_populated.validationRule-meta.xml
<ValidationRule>
    <fullName>Change_comment_populated</fullName>
    <active>true</active>
    <errorConditionFormula>Related_Order__c != null &amp;&amp; (Change_Comment__c ==&#39;&#39; ||  ISPICKVAL(Change_Category__c, &#39;&#39;))</errorConditionFormula>
    <errorMessage>Change comment must be populated if there is a related order.</errorMessage>
</ValidationRule>