News UAT/force-app/main/default/objects/Order__c/validationRules/Pause_Start_Date_less_than_TODAY.validationRule-meta.xml
<ValidationRule>
    <fullName>Pause_Start_Date_less_than_TODAY</fullName>
    <active>true</active>
    <description>The Campaign Pause Start Date must not be in the past.</description>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c,&quot;Pending for Pause&quot;),
Pause_Start_Date__c &lt; TODAY ()
)</errorConditionFormula>
    <errorDisplayField>Pause_Start_Date__c</errorDisplayField>
    <errorMessage>The Campaign Pause Start Date must not be in the past. Populate the date as today&#39;s date or a date in the future.</errorMessage>
</ValidationRule>