News UAT/force-app/main/default/objects/Order__c/validationRules/Renewal.validationRule-meta.xml
<ValidationRule>
    <fullName>Renewal</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Change_Category__c, &#39;Renewal&#39;) &amp;&amp; (  Related_Order__c   = NULL ||  Change_Comment__c = NULL)</errorConditionFormula>
    <errorMessage>If this is a renewal please enter Change Comment and choose a Related Order.</errorMessage>
</ValidationRule>