News UAT/force-app/main/default/objects/Order__c/validationRules/Setup_Notes_mandatory_with_Prop_start_dt.validationRule-meta.xml
<ValidationRule>
    <fullName>Setup_Notes_mandatory_with_Prop_start_dt</fullName>
    <active>true</active>
    <description>Setup Notes mandatory if Proposed start date is changed</description>
    <errorConditionFormula>AND( NOT(ISNEW()) , Proposed_Start_Date__c  &gt;  PRIORVALUE(Proposed_Start_Date__c),  NOT(ISCHANGED(Setup_Notes__c))  )</errorConditionFormula>
    <errorDisplayField>Setup_Notes__c</errorDisplayField>
    <errorMessage>The Proposed Start Date has been changed, please enter some Setup Risk Notes</errorMessage>
</ValidationRule>